--- a/Dashboard.css
+++ b/Dashboard.css
@@ -46,17 +46,22 @@ nav ul li {
 }
 
 /* Slideshow */
+/* Slideshow */
 .slideshow-container {
-    max-width: 100%;
     position: relative;
+    max-width: 100%;
+    margin: auto;
     overflow: hidden;
+}
+
+.slide {
+    display: none;
 }
 
 .slide img {
     width: 100%;
-    height: 500px;
+    height: 400px;
     object-fit: cover;
-    transition: opacity 1s ease-in-out;
 }
 
 /* Hero Section */
