--- a/Dashboard.css
+++ b/Dashboard.css
@@ -12,7 +12,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #201315;
+    background-color: #35111e;
     padding: 15px;
     color: white;
 }
@@ -67,7 +67,7 @@ nav ul li {
 /* Hero Section */
 .hero {
     padding: 50px 20px;
-    background: linear-gradient(to right, #3d1f23, #3b2123);
+    background: linear-gradient(to right, #a83d4c, #923c43);
     color: white;
 }
 
