--- a/index.css
+++ b/index.css
@@ -86,7 +86,7 @@ button:hover {
 }
 
 .links a {
-    color:#f15fcd;
+    color:#3ab3eb;
     text-decoration: none;
 }
 
@@ -110,3 +110,4 @@ button:hover {
 .login-right p {
     font-size: 12px;
 }
+
